--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -50,7 +50,7 @@
               %h5 MetaBright Challenges
               .challenges
                 %ul.checklist.metabright-challenges
-                  - @public_paths.each do |p|
+                  - @public_paths.sort_by{|path| [path.name.upcase]}.each do |p|
                     %li
                       %label
                         = check_box_tag "evaluation[selected_paths][#{p.id}]", 1, @evaluation_path_ids.include?(p.id)
@@ -60,7 +60,7 @@
               .challenges
                 - if @group_paths.any?
                   %ul.checklist.custom-challenges
-                    - @group_paths.each do |gp|
+                    - @group_paths.sort_by{|path| [path.name.upcase]}.each do |gp|
                       %li
                         %label
                           = check_box_tag "evaluation[selected_paths][#{gp.id}]", 1, @evaluation_path_ids.include?(gp.id)
