--- a/app/views/evaluations/submit.html.haml
+++ b/app/views/evaluations/submit.html.haml
@@ -1,5 +1,6 @@
 :css
-  .aboutcontainer{ width: 900px;}
+  body.employer{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
+  .aboutcontainer{ width: 900px; margin-bottom: 70px;}
   
 :javascript
   $(function(){
