--- a/app/views/pages/challenges.html.haml
+++ b/app/views/pages/challenges.html.haml
@@ -13,7 +13,7 @@
           - unless persona.paths.count == 0
             %h4= persona.name
             %div
-              - persona.paths.each do |path|
+              - persona.paths.sort_by{|path| [path.name.upcase]}.each do |path|
                 %div.mosaic-block.bar2.challengepagechallenge
                   - if path.public?
                     = link_to challenge_path(path.permalink), class: "mosaic-overlay", title: "#{path.name}" do
