--- a/app/views/paths/style.html.haml
+++ b/app/views/paths/style.html.haml
@@ -1,7 +1,7 @@
 .employer-container
   .employer-box
     .header
-      = image_tag STONEY_SMALL_URL, style:"", alt: "Stoney"
+      = image_tag GIANT_STONEY, style:"height: 61px;", alt: "Stoney"
       %h2 Customize Challenge CSS
     .body
       :css
