--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -17,6 +17,8 @@ pre { word-break: normal; }
   border-radius: 3px;
   padding: 7px 20px 5px 20px;
   border: 1px solid #DDD;
+  line-height: 18px;
+  text-shadow: none !important;
   //&:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white; }
   &:hover{ box-shadow: 0px 0px 2px black; text-decoration: none; color: white; }
   &:active{ position: relative; top: 1px; }
@@ -62,7 +64,6 @@ pre { word-break: normal; }
   @extend .sexy_buttons;
   background-color: #DAE1E4;
   color: #333 !important;
-  text-shadow: none !important;
   &:hover{ color: #333; }
 }
 .clear_floats { clear: both;}
@@ -207,6 +208,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 
 .navbar {
   z-index:1010; 
+  border-bottom: 1px solid rgb(201, 201, 201);
   
   .navbar-inner, .navbar .fill {
     border: 0;
