--- a/app/views/groups/_account_table.html.haml
+++ b/app/views/groups/_account_table.html.haml
@@ -26,9 +26,10 @@
         %div.control-group
           %label.control-label Confirm Password
           %div.controls= f.password_field :password_confirmation
-        %div{ style: "float:right;" }
-          %span.button.button-standard{ onclick: "$(this).parents('.modal').modal('hide');" } Close
-          = f.submit "Save", class: "button button-actionable", style: "margin-right: 10px;"
+        %div
+          = f.submit "Save", class: "submit_button", style: "display: inline-block;"
+          %span.submit_button_standard{ style: "display: inline-block; margin-right: 10px;", onclick: "$(this).parents('.modal').modal('hide');" } Close
+          
         
 %table.table
   %thead
@@ -56,7 +57,7 @@
           %a{ style: "color: #0088cc;", onclick: "$(this).hide();$('#invite_form').show();" } + Invite more users to this account.
           = form_tag(invite_group_url(@group), id: "invite_form", class: "hide") do
             = text_field_tag :email, nil, placeholder: "Enter email address...", class: "invite"
-            = submit_tag "Invite", class: "button button-standard button-mini"
+            = submit_tag "Invite", class: "button submit_button_standard button-small", style: "float: none;"
         - else
           %a{ style: "color: #0088cc;", onclick: "$(this).hide();$('#upgrade_group').show();" } Upgrade your account to invite more users.
           = form_for(@group, url: new_group_url, html: { class: "hide", id: "upgrade_group", method: "put" }) do |f|
@@ -64,6 +65,6 @@
               %label.control-label Choose a plan you'd like to upgrade to:
               .controls
                 = f.select(:plan_type, Group::ACTIVE_PLAN_TYPE_LIST)
-            = submit_tag "Upgrade", class: "button button-standard button-mini"
+            = submit_tag "Upgrade", class: "button submit_button_standard button-small", style: "float: none;"
       %td{ colspan: "1", style: "border-bottom: 0;text-align: right;" }
         Seats Available: #{@group.seats_available}
