--- a/app/views/users/professional.html.haml
+++ b/app/views/users/professional.html.haml
@@ -44,6 +44,7 @@
           = f.text_field :city, style: "width: 187px;", placeholder:"Please enter your city"
 
       %hr
+      / Change these buttons
       %div.control-group
         %div.controls
         = f.submit "Save", class: "button button-actionable", style: "float: right; margin-left: 10px; margin-right: 20px;", descriptor: "save-button"
