edits to new admin account

--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -805,7 +805,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
       .button img { height:30px; }
       .landingbuttontext { font-weight: regular; color: #636363;}
       .text_field { margin-bottom: 3px; }
-      .submit_button { width: auto; font-size: 14px; padding: 3px 10px; margin-bottom: 5px;}
+      .submit_button { width: auto; padding: 7px 20px 5px 20px;}
     }
   }
 }
