--- a/app/views/pages/portal.html.haml
+++ b/app/views/pages/portal.html.haml
@@ -1,4 +1,4 @@
-#employer.employer-container{ style: "margin-top: 145px; width: 550px;" }
+#employer.employer-container{ style: "margin: 140px auto 15px; width: 550px;" }
   #organization_portal.aboutbox
     .header{ style: "width: 100%; border-bottom: 1px solid #DDD;" }
       = image_tag STONEY_SMALL_URL, style: "height: 72px; display: inline; vertical-align: middle", alt: "Stoney"
