--- a/app/views/pages/airs_landing.html.haml
+++ b/app/views/pages/airs_landing.html.haml
@@ -11,7 +11,7 @@
         %h1
           Welcome Students of AIRS Training Courses
         %h2
-          Special Offer: 15% Off your Evaluator Subscription
+          Special Offer: 25% Off your Evaluator Subscription
         = link_to "Sign Up Now", promo_pricing_path, class:"submit_button_huge", style: "float: none; display: inline-block; margin-top: 20px;"
     %article#art_1
       #happy_users.row-fluid
@@ -180,7 +180,7 @@
               #collapseOne.accordion-body.collapse.in
                 .accordion-inner 
                   We evaluate your candidates with things called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
-                  We distill all this information down into one easy to understand score that indicates how capable a candidate actually is. 
+                  We distill all this information down into one easy to understand score that indicates how capable your candidates actually are. 
             .accordion-group 
               .accordion-heading 
                 %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseTwo"} 
