--- a/app/views/pages/promo_pricing.html.haml
+++ b/app/views/pages/promo_pricing.html.haml
@@ -10,10 +10,11 @@
       .aboutbox
         .body
           %div
-            #prices.area{ style: "margin-top: -10px; width: inherit;"}
-              %h2{ style: "border: none; margin: 0;" }  
-                Evaluator Pricing 
-              %h2{ style: "text-transform: none; font-size: 22px;"} AIRS Students Save 15% Off Their Evaluator Subscription
+            #prices.area
+              %h2 
+                %span Special Discount:
+                AIRS Students Save 
+                %span 25%
               .free_trial 
                 %h1 All plans come with a FREE 14-day trial.
                 %p No risk. No obligation. If at any point during your first 14 days you don't think the Evaluator is right for you, just cancel your subscription. Your credit card won't ever be charged. 
@@ -26,7 +27,7 @@
                     .price.promo
                       .price_figure 
                         %div.price_description AIRS Special Rate:
-                        %span.price_number $16.99 
+                        %span.price_number $14.99 
                         %span.price_tenure per month 
                     %ul.features 
                       %li Unlimited Evaluations
@@ -44,7 +45,7 @@
                     .price.promo
                       .price_figure 
                         %div.price_description AIRS Special Rate:
-                        %span.price_number $25.49 
+                        %span.price_number $22.49 
                         %span.price_tenure per month 
                     %ul.features 
                       %li Unlimited Evaluations
@@ -60,7 +61,7 @@
                     .price.promo
                       .price_figure 
                         %div.price_description AIRS Special Rate:
-                        %span.price_number $42.49 
+                        %span.price_number $37.49 
                         %span.price_tenure per month 
                     %ul.features 
                       %li Unlimited Evaluations
@@ -76,7 +77,7 @@
                     .price.promo
                       .price_figure 
                         %div.price_description AIRS Special Rate:
-                        %span.price_number $76.49 
+                        %span.price_number $67.49 
                         %span.price_tenure per month 
                     %ul.features 
                       %li Unlimited Evaluations
@@ -126,7 +127,7 @@
                   #collapseOne.accordion-body.collapse
                     .accordion-inner 
                       We evaluate your candidates with things called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
-                      We distill all this information down into one easy to understand score that indicates how capable a candidate actually is. 
+                      We distill all this information down into one easy to understand score that indicates how capable your candidates actually are. 
                 .accordion-group 
                   .accordion-heading 
                     %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseTwo"} 
