--- a/app/views/users/professional.html.haml
+++ b/app/views/users/professional.html.haml
@@ -47,5 +47,5 @@
       / Change these buttons
       %div.control-group
         %div.controls
-        = f.submit "Save", class: "button button-actionable", style: "float: right; margin-left: 10px; margin-right: 20px;", descriptor: "save-button"
-        = link_to "Back", profile_path(@user.username), class: "button button-standard", style: "float: right;"
+        = f.submit "Save", class: "submit_button", style: "margin-left: 10px; margin-right: 20px;", descriptor: "save-button"
+        = link_to "Back", profile_path(@user.username), class: "submit_button_standard", style: "float: left;"
