--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -55,7 +55,7 @@
               %span Guaranteed
               to improve your quality of hire and decrease your time to fill. Get started for free!
             .big_submit_button
-              = link_to "SIGN UP FOR FREE!", trial_groups_path, class: "submit_button", descriptor: "signup-link"
+              = link_to "SIGN UP FOR FREE!", pricing_path, class: "submit_button", descriptor: "signup-link"
         .area{ style: "margin-top: 75px;"} 
           %h2{ style: "margin-bottom: 0;"} 
             The MetaBright Evaluator
@@ -118,7 +118,7 @@
               %span Guaranteed
               to improve your quality of hire and decrease your time to fill. Get started for free!
             .big_submit_button
-              = link_to "SIGN UP FOR FREE!", trial_groups_path, class: "submit_button", descriptor: "signup-link"
+              = link_to "SIGN UP FOR FREE!", pricing_path, class: "submit_button", descriptor: "signup-link"
         .area.pitch_tiles{ style: "margin-top:0; "} 
           %h2 Why you'll love MetaBright 
           .tile 
@@ -210,5 +210,5 @@
               %span Guaranteed
               to improve your quality of hire and decrease your time to fill. Get started for free!
             .big_submit_button
-              = link_to "SIGN UP FOR FREE!", trial_groups_path, class: "submit_button", descriptor: "signup-link"
+              = link_to "SIGN UP FOR FREE!", pricing_path, class: "submit_button", descriptor: "signup-link"
         
