--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -158,6 +158,24 @@ body.employer .container.body { width: inherit; background-color: transparent; p
   }
 }
 
+.mb_challenges {
+  margin-left: 15px;
+  h4 {}
+  ul {
+    list-style: none;
+    -moz-column-count: 3; /* Firefox */
+    -webkit-column-count: 3; /* Safari and Chrome */
+    column-count: 3;
+    -moz-column-gap: 20px; /* Firefox */
+    -webkit-column-gap: 20px; /* Safari and Chrome */
+    column-gap: 20px;
+    
+    li { padding: 6px 0;}
+    img {height: 30px; width: 30px;}
+    span {font-size: 16px;}
+  }
+}
+
 #evaluations_overview{
   background: $employer_blue;
   
