--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -159,8 +159,17 @@ body.employer .container.body { width: inherit; background-color: transparent; p
 }
 
 .mb_challenges {
-  margin-left: 15px;
-  h4 {}
+  .welcome {
+    margin: 5px 5px 15px 5px;
+    
+    .holder {
+      padding: 10px 14px;
+      .text_box{
+        img {height: 40px; width: 40px; margin-top: 18px;}
+        p {font-size: 16px; line-height: 22px;}
+      }
+    }
+  }
   ul {
     list-style: none;
     -moz-column-count: 3; /* Firefox */
@@ -170,6 +179,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     -webkit-column-gap: 20px; /* Safari and Chrome */
     column-gap: 20px;
     
+    a { text-decoration: none;}
     li { padding: 6px 0;}
     img {height: 30px; width: 30px;}
     span {font-size: 16px;}
