--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -178,6 +178,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     -moz-column-gap: 20px; /* Firefox */
     -webkit-column-gap: 20px; /* Safari and Chrome */
     column-gap: 20px;
+    column-fill: balance;
     
     a { text-decoration: none;}
     li { padding: 6px 0;}
