style change on challenge directory

--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -179,6 +179,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     -webkit-column-gap: 20px; /* Safari and Chrome */
     column-gap: 20px;
     column-fill: balance;
+    margin-bottom: 25px;
     
     a { text-decoration: none;}
     li { padding: 6px 0;}
