--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -10,7 +10,7 @@
           %div.draft_saved{ style: "float: right; font-size: 15px;" } Draft saved...
         = image_tag @path.path_pic, alt: "#{@path.name}"
         %div{ style: "display:inline-block;" }
-          %span
+          %span.name
             %strong #{@path.name}
       
       %div{ style: "text-align:center;" }
