--- a/app/assets/stylesheets/challenge.css.scss
+++ b/app/assets/stylesheets/challenge.css.scss
@@ -24,7 +24,9 @@
       
       h4 { text-align: left; font-size: 20px; line-height: 25px; }
       a { margin-top:14px; }
-      .quizcontainer { margin-top: 20px; text-align: left; }
+      .quizcontainer { margin-top: 20px; text-align: left; width: 768px; }
+      .questionandresponsespace { width: 59%; }
+      .continue_stats { width: 36.3%; }
     }
   }
   
